--- a/Taschenrechner/Taschenrechner/MainWindow.xaml
+++ b/Taschenrechner/Taschenrechner/MainWindow.xaml
@@ -4,9 +4,44 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Taschenrechner"
+        xmlns:UserControls="clr-namespace:Taschenrechner.UserControls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="300">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="25*"/>
+            <ColumnDefinition Width="25*"/>
+            <ColumnDefinition Width="25*"/>
+            <ColumnDefinition Width="25*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="16.66*"/>
+            <RowDefinition Height="16.66*"/>
+            <RowDefinition Height="16.66*"/>
+            <RowDefinition Height="16.66*"/>
+            <RowDefinition Height="16.66*"/>
+            <RowDefinition Height="16.66*"/>
+        </Grid.RowDefinitions>
+        <UserControls:ResultView x:Name="resultView" BorderBrush="Green" BorderThickness="1" Grid.Row="0" Grid.ColumnSpan="4"></UserControls:ResultView>
+        <Button Grid.Row="1" Grid.Column="0" Content="√" Margin="5" FontWeight="Bold" FontSize="20 px" Tag="squareRoot" Click="Button_Click"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="^2" Margin="5" FontWeight="Bold" FontSize="20 px" Tag="pow" Click="Button_Click"/>
+        <Button Grid.Row="1" Grid.Column="2" Content="+/-" Margin="5" FontWeight="Bold" FontSize="20 px" Tag="negation" Click="Button_Click"/>
+        <Button Grid.Row="1" Grid.Column="3" Background="OrangeRed" Content="CE" Margin="5" FontWeight="Bold" Tag="clearAll" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="2" Grid.Column="0" Content="7" Margin="5" FontWeight="Bold" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="2" Grid.Column="1" Content="8" Margin="5" FontWeight="Bold" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="2" Grid.Column="2" Content="9" Margin="5" FontWeight="Bold" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="2" Grid.Column="3" Content="÷" Margin="5" FontWeight="Bold" FontSize="20 px" Tag="division" Click="Button_Click"/>
+        <Button Grid.Row="3" Grid.Column="0" Content="4" Margin="5" FontWeight="Bold" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="3" Grid.Column="1" Content="5" Margin="5" FontWeight="Bold" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="3" Grid.Column="2" Content="6" Margin="5" FontWeight="Bold" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="3" Grid.Column="3" Content="×" Margin="5" FontWeight="Bold" FontSize="20 px" Tag="multiplication" Click="Button_Click"/>
+        <Button Grid.Row="4" Grid.Column="0" Content="1" Margin="5" FontWeight="Bold" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="4" Grid.Column="1" Content="2" Margin="5" FontWeight="Bold" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="4" Grid.Column="2" Content="3" Margin="5" FontWeight="Bold" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="4" Grid.Column="3" Content="-" Margin="5" FontWeight="Bold" FontSize="20 px" Tag="minus" Click="Button_Click"/>
+        <Button Grid.Row="5" Grid.Column="0" Content="0" Margin="5" FontWeight="Bold" FontSize="20 px" Click="Button_Click"/>
+        <Button Grid.Row="5" Grid.Column="1" Content="." Margin="5" FontWeight="Bold" FontSize="20 px" Tag="point" Click="Button_Click"/>
+        <Button Grid.Row="5" Grid.Column="2" Content="=" Margin="5" FontWeight="Bold" FontSize="20 px" Tag="equals" Click="Button_Click"/>
+        <Button Grid.Row="5" Grid.Column="3" Content="+" Margin="5" FontWeight="Bold" FontSize="20 px" Tag="plus" Click="Button_Click"/>
     </Grid>
 </Window>
